# libhy_hal

./: .gitignore  Makefile.am  README.md  build.sh  configure.ac  hy_hal.pc.in
build-script/arterytek/at32f4xx/: Makefile.am
build-script/eeasytech/SV823/: Makefile.am
build-script/fullhan/MC6810E/: config.sh
build-script/pc/pc-chip/: Makefile.am
example/: Makefile.am
example/linux/: Makefile.am  hy_dir_demo.c  hy_dir_test.c  hy_dlopen_demo.c  hy_dlopen_test.c  hy_gpio_demo.c  hy_hal_fifo_read_demo.c  hy_hal_fifo_read_test.c  hy_hal_fifo_write_demo.c  hy_hal_fifo_write_test.c  hy_hotplug_demo.c  hy_list_demo.c  hy_log_demo.c  hy_log_test.c  hy_mem_demo.c  hy_mem_test.c  hy_pipe_demo.c  hy_pipe_test.c  hy_sd_demo.c  hy_socket_client_demo.c  hy_socket_server_demo.c  hy_storage_demo.c  hy_storage_test.c  hy_template_demo.c  hy_template_test.c  hy_thread_test.c  hy_time_demo.c  hy_time_test.c  hy_uart_demo.c  hy_uart_test.c
example/linux/audio/: Makefile.am  hy_audio_recorder_demo.c
example/linux/ipc/: Makefile.am
example/linux/ipc/ipc_socket/: Makefile.am  hy_ipc_socket_client_demo.c  hy_ipc_socket_server_demo.c
example/linux/log/: Makefile.am  hy_log_client_demo.c  hy_log_demo.c  hy_log_ipc_client_demo.c  hy_log_ipc_server_demo.c
example/linux/socket/: Makefile.am  hy_socket_client_demo.c  hy_socket_server_demo.c
example/linux/thread/: Makefile.am  hy_thread_demo.c  hy_thread_test.c
example/mac/: Makefile.am
example/mcu/: Makefile.am  hy_gpio_demo.c  hy_gpio_test.c  hy_template_demo.c  hy_template_test.c
example/mcu/at/: Makefile.am
example/mcu/hc/: Makefile.am
example/rtos/: Makefile.am
example/window/: Makefile.am
include/: Makefile.am  hy_assert.h  hy_barrier.h  hy_compile.h  hy_error.h  hy_hal_utils.h  hy_log.h  hy_module.h  hy_string.h  hy_type.h
include/hy_hal/: Makefile.am  hy_assert.h  hy_compile.h  hy_hal_misc.h  hy_hal_utils.h  hy_hex.h  hy_mem.h  hy_module.h  hy_printf.h  hy_string.h  hy_type.h
include/linux/: Makefile.am  hy_dir.h  hy_dlopen.h  hy_file.h  hy_gpio.h  hy_hal_fifo.h  hy_hotplug.h  hy_log.h  hy_mem.h  hy_pipe.h  hy_sd.h  hy_signal.h  hy_socket.h  hy_storage.h  hy_string.h  hy_thread.h  hy_time.h  hy_uart.h
include/linux/audio/: Makefile.am  hy_audio_recorder.h
include/linux/ipc/: Makefile.am
include/linux/ipc/ipc_socket/: hy_ipc_socket.h  ipc_socket.h  ipc_socket_client.h  ipc_socket_server.h
include/linux/log/: Makefile.am  dynamic_array.h  epoll_helper.h  fifo.h  fifo_async.h  format_cb.h  hy_log.h  log_epoll.h  log_fifo.h  log_file.h  log_private.h  log_socket.h  log_socket_ipc.h  process_client.h  process_handle_data.h  process_ipc.h  process_ipc_client.h  process_ipc_server.h  process_server.h  process_single.h  socket_fd_node.h  socket_ipc.h  socket_ipc_client.h  socket_ipc_server.h  socket_node_fd.h  thread_specific_data.h
include/linux/socket/: Makefile.am  hy_socket.h
include/linux/thread/: Makefile.am  hy_thread.h  hy_thread_cond.h  hy_thread_mutex.h  hy_thread_sem.h
include/mac/: Makefile.am
include/mcu/: Makefile.am  gpio_2_str.h  hy_gpio.h  hy_log.h  hy_mem.h  hy_system.h  hy_uart.h  uart_2_str.h
include/mcu/at/: Makefile.am
include/mcu/hdhc/: Makefile.am
include/rtos/: Makefile.am
include/window/: Makefile.am
keil_project/: Makefile.am
keil_project/at/: Makefile.am
keil_project/at/at32f4xx/: Makefile.am
keil_project/at/at32f4xx/gpio/: gpio.uvoptx  gpio.uvprojx
keil_project/hc/: Makefile.am
m4/: check_libhy_mcu.m4  check_libhy_utils.m4  check_libtinyalsa.m4  check_pthread.m4  select_target_os.m4  select_vender.m4
res/: Makefile.am
src/: Makefile.am  hy_hex.c  hy_mem.c  hy_string.c
src/linux/: Makefile.am  hy_dir.c  hy_dlopen.c  hy_file.c  hy_gpio.c  hy_hal_fifo.c  hy_hotplug.c  hy_log.c  hy_mem.c  hy_pipe.c  hy_sd.c  hy_signal.c  hy_socket.c  hy_storage.c  hy_string.c  hy_thread.c  hy_time.c  hy_uart.c
src/linux/audio/: Makefile.am  hy_audio_recorder.c
src/linux/ipc/: Makefile.am
src/linux/ipc/ipc_socket/: Makefile.am  hy_ipc_socket.c  ipc_socket.c  ipc_socket_client.c  ipc_socket_server.c
src/linux/log/: Makefile.am  dynamic_array.c  epoll_helper.c  fifo.c  fifo_async.c  format_cb.c  hy_log.c  log_epoll.c  log_fifo.c  log_file.c  log_socket.c  log_socket_ipc.c  process_client.c  process_handle_data.c  process_ipc.c  process_ipc_client.c  process_ipc_server.c  process_server.c  process_single.c  socket_fd_node.c  socket_ipc.c  socket_ipc_client.c  socket_ipc_server.c  socket_node_fd.c  thread_specific_data.c
src/linux/socket/: Makefile.am  hy_socket.c
src/linux/thread/: Makefile.am  hy_thread.c  hy_thread_cond.c  hy_thread_mutex.c  hy_thread_sem.c
src/mac/: Makefile.am
src/mcu/: Makefile.am  hy_demo.c  hy_log.c  hy_mem.c
src/mcu/arterytek/: Makefile.am
src/mcu/arterytek/at32f4xx/: AT32F407xG_FLASH.ld  Makefile.am  hy_demo.c  hy_gpio.c  hy_system.c  hy_uart.c
src/mcu/at/: Makefile.am
src/mcu/at/at32f4xx/: Makefile.am  hy_gpio.c  hy_system.c  hy_uart.c
src/mcu/hc/: Makefile.am
src/rtos/: Makefile.am
src/window/: Makefile.am
